# cat-vocal-swapper

./: .gitignore  pyproject.toml
src/cat_vocal_swapper/: __init__.py  audio_functions.py  audio_test.py  comparison_test.py  midi_conversion.py  visualise.py
